# lgcell2-core

./: .gitignore  Cargo.toml  build-wasm.sh  build.rs
.github/: .gitignore  copilot-instructions.md
docs/: index.md  view-mode.md  wasm-build.md
docs-ai/architecture/: circuit-examples.md  data-model.md  index.md  overview.md  simulation-model.md
docs-ai/done-task/: code-review-2026-03-25.md  code-review-2026-03-26.md  code-review.md  external-test-framework.md  fix-failing-test-cases.md  output-format-optimization.md  remove-legacy-generators-testers.md  revert-to-cell-state.md  stateful-wasm-api.md  test-io-components.md  unique-wire-constraint.md  view-mode-cli.md
docs-ai/task/: README.md  cell-merge-optimization.md  code-review-2026-03-25.md  code-review-2026-03-26.md  code-review-2026-04-01.md  code-review.md  external-test-framework.md  fix-failing-test-cases.md  fix-sr-latch-set-then-reset.md  interactive-cli.md  output-format-optimization.md  remove-redundant-sort.md  reorganize-test-categories.md  revert-to-cell-state.md  separate-clap-dependency.md  stateful-wasm-api.md  structured-error-types.md  test-io-components.md  unique-wire-constraint.md  view-mode-cli.md
docs/spec/: circuit-json.md  sub-circuit.md
resources/tests/: test-manifest.yaml
src/: AGENTS.md  lib.rs  wasm_api.rs
src/base/: error.rs  mod.rs  pos.rs  rect.rs
src/circuit/: builder.rs  cell.rs  cell_tests.rs  circuit.rs  circuit_tests.rs  component.rs  generator.rs  generator_tests.rs  mod.rs  module.rs  module_tests.rs  (+5 more)
tests/: circuit_tests.rs  half_adder.rs  test_helpers.rs
(+148 files in other folders)
